--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SOLID TYPESCRIPT",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:silent": "jest --watchAll --silent --noStackTrace"
   },
   "repository": {
     "type": "git",
@@ -17,16 +18,16 @@
   },
   "homepage": "https://github.com/MarshFfeco/typescript-solid#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.6.1",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6"
-  },
-  "dependencies": {
-    "ts-loader": "^9.4.4"
   }
 }
